provide minified version

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 	<div id="ev-roulette-will-be-here"></div>
 
 	<!-- подключи мои либы -->
-	<script src="ev_weapon.js"></script>
-	<script src="ev_roulette.js"></script>
+	<!-- <script src="ev_weapon.js"></script> -->
+	<!-- <script src="ev_roulette.js"></script> -->
+
+	<!-- или ужатую версию -->
+	<script src="ev_roulette.min.js"></script>
 
 	<!-- отредактируй скрипт под себя-->
 	<script src="index.js"></script>
