little redesign + image preloading

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 	<meta charset="utf-8">
 	<title>Ev Roulette</title>
 
+	<!-- симуляция глобального стиля сайта -->
+	<!-- эти стили не имеют отношения к самой рулетке -->
+	<style>
+		body {
+			background: #1e2129;
+			margin: 0;
+			padding: 0;
+		}
+		
+		#mysite-roulette-container {
+			width: 602px;
+			height: 182px;
+			margin: 100px auto 0;
+		}
+	</style>
+
 	<!-- отредактируй стиль рулетки под себя-->
 	<link rel="stylesheet" href="ev_style.css">
 
@@ -13,10 +29,9 @@
 	<!-- здесь появится рулетка
 	     (идентификатор элемента может быть любым;
 	     главное, не забудь прописать его в скрипте index.js) -->
-	<div id="ev-roulette-will-be-here"></div>
+	<div id="mysite-roulette-container"></div>
 
-	<!-- подключи мои либы -->
-	<!-- <script src="ev_weapon.js"></script> -->
+	<!-- подключи мою либу -->
 	<!-- <script src="ev_roulette.js"></script> -->
 
 	<!-- или ужатую версию -->
